--- a/src/ImageUpload.css
+++ b/src/ImageUpload.css
@@ -1,7 +1,8 @@
 .imageupload {
-    display: flex;
-    flex-direction: column;
-    width: 60%;
+    
+    background-color: white;
+    max-width: 500px;
+    border: 1px solid lightgray;
     margin-left: auto;
     margin-right: auto;
     margin-top: 10px;
@@ -10,7 +11,23 @@
     /* border-top: 1px solid lightgray; */
 }
 
+.inner_imageupload {
+    display: flex;
+    flex-direction: column;
+    margin: 10px
+}
 .imageupload_progress {
     width: 100%;
+    height: 40px;
 
 }
+.inner_imageupload input {
+    margin-bottom: 7px;
+}
+
+.inner_imageupload button {
+    border: 1px solid lightgray;
+}
+
+
+
